--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,29 +13,35 @@ build:
   number: 0
   skip: true  # [py<35]
   script: python -m pip install --no-deps --ignore-installed .
+  entry_points:
+    - jupyterhub = jupyterhub.app:main
+    - jupyterhub-singleuser = jupyterhub.singleuser:main
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
+    - setuptools
+    - wheel
   run:
-    - python
-    - alembic
-    - async_generator >=1.8
-    - certipy>=0.1.2
+    - python >=3.6
+    - alembic >=1.4
+    - async_generator >=1.9
+    - certipy >=0.1.2
     - configurable-http-proxy
     - entrypoints
-    - jinja2
-    - oauthlib>=3.0
+    - jinja2 >=2.11.0,<3.0.0
+    - oauthlib >=3.0
     - pamela  # [not win]
-    - prometheus_client >=0.0.21
+    - prometheus_client >=0.4.0
     - psutil  # [win]
     - pycurl
     - python-dateutil
     - requests
     - sqlalchemy >=1.1
-    - tornado >=5.0
+    - tornado >=5.1
     - traitlets >=4.3.2
+    - jupyter_telemetry >=0.1.0
 
 test:
   imports:
