adding pinning to - configurable-http-proxy

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - importlib-metadata >=3.6
     - async_generator >=1.9
     - certipy >=0.1.2
-    - configurable-http-proxy
+    - configurable-http-proxy >=4
     - entrypoints
     - jinja2 >=2.11.0,<3.0.0
     - oauthlib >=3.0
