--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - pip
     - setuptools
     - wheel
-  run:
+    run:
     - python
     - alembic >=1.4
     - importlib-metadata >=3.6
@@ -34,12 +34,12 @@ requirements:
     - certipy >=0.1.2
     - configurable-http-proxy
     - entrypoints
-    - pycurl
     - jinja2 >=2.11.0,<3.0.0
     - oauthlib >=3.0
     - pamela  # [not win]
     - prometheus_client >=0.4.0
-    - psutil >= 5.6.5  # [win]
+    - psutil  # [win]
+    - pycurl
     - python-dateutil
     - requests
     - packaging
@@ -47,7 +47,7 @@ requirements:
     - tornado >=5.1
     - traitlets >=4.3.2
     - jupyter_telemetry >=0.1.0
-   run_constrained:
+  run_constrained:
     - psutil >=5.6.5
 test:
   imports:
