--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
   run:
     - python
     - alembic >=1.4
-    - importlib-metadata >=3.6. # [py<310]
+    - importlib-metadata >=3.6 # [py310]
     - async_generator >=1.9
     - certipy >=0.1.2
     - configurable-http-proxy
@@ -45,7 +45,7 @@ requirements:
     - tornado >=5.1
     - traitlets >=4.3.2
     - jupyter_telemetry >=0.1.0
-    
+
 test:
   imports:
     - jupyterhub
