--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,6 @@ outputs:
       skip: true  # [py<37 or s390x]
       entry_points:
         - jupyterhub = jupyterhub.app:main
-        - jupyterhub-singleuser = jupyterhub.singleuser:main
     requirements:
       host:
         - python
@@ -63,6 +62,8 @@ outputs:
   - name: jupyterhub-singleuser
     build:
       skip: true  # [py<37 or s390x]
+      entry_points:
+        - jupyterhub-singleuser = jupyterhub.singleuser:main
     requirements:
       host:
         - python
