--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,76 +1,77 @@
-{% set version = "4.0.2" %}
+{% set version = "5.2.1" %}
 
 package:
-  name: jupyterhub-split
+  name: jupyterhub-feedstock
   version: {{ version }}
 
 source:
   url: https://pypi.io/packages/source/j/jupyterhub/jupyterhub-{{ version }}.tar.gz
-  sha256: d4e450eed8d90dfbcf0eca08f00f2093a0bce74dc51f7cfc0b7057f602341a1d
+  sha256: 5b35444c2c254e60563887d1d59c2376813d16a166ec6e0a410c773cdbd37ebd
 
 build:
   number: 0
-  skip: true  # [py<37 or s390x]
+  noarch: python
 
 outputs:
   - name: jupyterhub-base
-    script: build-base.sh   # [unix]
-    script: build-base.bat  # [win]
     build:
-      skip: true  # [py<37 or s390x]
+      noarch: python
+      script: python -m pip install . --no-deps -vv
       entry_points:
         - jupyterhub = jupyterhub.app:main
+        - jupyterhub-singleuser = jupyterhub.singleuser:main
     requirements:
       host:
-        - python
-        - pip
+        - python >=3.10
         - setuptools
-        - wheel
+        - pip
       run:
-        - python
         - alembic >=1.4
-        - importlib_metadata >=3.6  # [py<310]
-        - async_generator >=1.9
         - certipy >=0.1.2
         - jinja2 >=2.11.0
+        - jupyter_events
         - oauthlib >=3.0
-        - pamela  # [not win]
-        - prometheus_client >=0.4.0
-        - psutil >=5.6.5 # [win]
+        - packaging
+        - pamela
+        - psutil
+        - prometheus_client >=0.5.0
+        - pydantic >=2
+        - python >=3.10
         - python-dateutil
         - requests
-        - packaging
-        - sqlalchemy >=1.4
+        - sqlalchemy >=1.4.1
         - tornado >=5.1
         - traitlets >=4.3.2
-        - jupyter_telemetry >=0.1.0
-        - pycurl # tornado uses pycurl by default, if available
+      run_constrained:
+        - psutil >=5.6.5
+
     test:
+      requires:
+        - pip
       imports:
         - jupyterhub
         - jupyterhub.apihandlers
         - jupyterhub.handlers
         - jupyterhub.tests
         - jupyterhub.app
-      requires:
-        - pip
       commands:
         - pip check
-        - python -m jupyterhub --help-all
-        - jupyterhub -h
+        - jupyterhub --help-all
+        - test -f $PREFIX/share/jupyterhub/templates/page.html
+        - test -f $PREFIX/share/jupyterhub/static/components/jquery/dist/jquery.min.js
+        - test -f $PREFIX/share/jupyterhub/static/css/style.min.css
+        - test -f $PREFIX/share/jupyterhub/static/js/home.js
 
   - name: jupyterhub-singleuser
     build:
-      skip: true  # [py<37 or s390x]
-      entry_points:
-        - jupyterhub-singleuser = jupyterhub.singleuser:main
+      noarch: python
     requirements:
       host:
-        - python
+        - python >=3.8
       run:
         - {{ pin_subpackage("jupyterhub-base", exact=True) }}
-        - jupyterlab >=3,<5
-        - python
+        - jupyterlab >=3.1
+        - python >=3.8
     test:
       requires:
         - pip
@@ -82,15 +83,17 @@ outputs:
 
   - name: jupyterhub
     build:
-      skip: true  # [py<37 or s390x]
+      noarch: python
     requirements:
       host:
-        - python
+        - python >=3.8
       run:
         - {{ pin_subpackage("jupyterhub-base", exact=True) }}
-        - configurable-http-proxy
+        - configurable-http-proxy >=4
         - nodejs >=12
-        - python
+        - psutil  # undeclared extra, used preferentially for logging
+        - pycurl  # undeclared extra, used preferentially for performance
+        - python >=3.8
     test:
       requires:
         - pip
@@ -99,20 +102,17 @@ outputs:
       commands:
         - pip check
         - jupyterhub --help-all
-        - configurable-http-proxy --help
+        - configurable-http-proxy --help  # [not win]
 
 about:
   home: https://github.com/jupyterhub/jupyterhub
-  description: |
-    With JupyterHub you can create a multi-user Hub that spawns, manages, and proxies multiple instances of the single-user Jupyter notebook server.
-  dev_url: https://github.com/jupyterhub/jupyterhub
-  doc_url: https://jupyterhub.readthedocs.io
   license: BSD-3-Clause
-  license_family: BSD
   license_file: COPYING.md
   summary: Multi-user server for Jupyter notebooks
+  doc_url: https://jupyterhub.readthedocs.io
 
 extra:
+  feedstock-name: jupyterhub
   recipe-maintainers:
     - minrk
     - blink1073
