--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -77,6 +77,7 @@ outputs:
         - pytest.ini
       requires:
         - pip
+        # TODO: Enable tests when playwright is available on the main channel.
         # - pytest >=3.3
         # - pytest-asyncio >=0.17,!=0.23.*
         # - pytest-rerunfailures
